# Fintech2022

./: .dockerignore  .env.example  .gitignore  README.md  contract.sol  docker-compose.debug.yaml  docker-compose.yaml  package.json  tailwind.config.js  tsconfig.json
backend/: .editorconfig  Dockerfile  Makefile  app.py  eip712.py  mutation.py  nto-moll-db.sqlite3  nto-moll-db.sqlite3-journal  pyproject.toml  query.py  requirements.txt  types.py  utils.py
backend/src/: __main__.py  checks.py  client.py  config.py  env.py  payload.py  rpc.py  storage.py  styled_errors.py
backend/src/controller/: graphql.py  main.py
backend/src/event/: startup.py
backend/src/view/: auth.py  room.py  signature.py  ticket.py  utils.py
backend/src/view/mutation/: main.py  product.py
backend/src/view/query/: main.py  product.py
blockchain/: eip712.py  test.py
blockchain/contracts/: EIP712.sol  RentalAgreement.sol
blockchain/scripts/: deploy.js  rent.js
frontend/: Dockerfile  config-overrides.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  App.tsx  App2.tsx  Auth.js  Cashiers.js  RoomDetails.js  RoomEdit.js  Rooms.js  RoomsCreate.js  Ticket.js  contract.js  graphql.js  index.js  index.tsx  utils.js
frontend/src/pages/: index.tsx
frontend/src/pages/MainPage/: index.tsx
frontend/src/pages/RoomPage/: [id].tsx  cashiers.tsx  edit.tsx
frontend/src/pages/RoomsPage/: create.tsx  index.tsx
nginx/: nginx.conf
pages/: _app.tsx  index.tsx  nft.tsx
reverseproxy/: nginx.conf
shared/abi/: helloWorld.ts  nft.ts
(+7 files in other folders)
