[build-system]
requires = ["poetry-core==1.2.0a2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nto-graphql-task"
version = "0.1.0"
description = ""
authors = ["Yan Kurbatov <deknowny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
strawberry-graphql = {url = "https://github.com/deknowny/strawberry/archive/v0.94.0a1.zip"}
uvicorn = {extras = ["standard"], version = "^0.16.0"}
fastapi = "^0.70.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^21.12b0"
mypy = "^0.920"
pre-commit = "^2.16.0"
autoflake = "^1.4"
pytest = "^6.2.5"
requests = "^2.26.0"

[tool.black]
line-length = 78

[tool.isort]
profile = "wemake"
src_paths = ["src"]
line_length = 78
